# kotlin-native

./: build.gradle  gradle.properties  settings.gradle
Interop/Runtime/: build.gradle
backend.native/: build.gradle  llvm.def
backend.native/cli.bc/src/org/jetbrains/kotlin/cli/bc/: K2Native.kt  K2NativeCompilerArguments.kt
backend.native/compiler/ir/backend.native/src/org/jetbrains/kotlin/backend/konan/: CodeCoverage.kt  (+5 more)
backend.native/tests/: build.gradle
backend.native/tests/runtime/basic/: main_exception.kt
backend.native/tests/runtime/exceptions/: check_stacktrace_format.kt
buildSrc/plugins/: build.gradle
buildSrc/plugins/src/main/kotlin/org/jetbrains/kotlin/: ExternalTestReportMerger.kt
konan/: konan.properties
llvmCoverageMappingC/: CMakeLists.txt
llvmCoverageMappingC/src/main/cpp/: CoverageMappingC.cpp
llvmCoverageMappingC/src/main/include/: CoverageMappingC.h
llvmPasses/src/GCOVProfilingPatched/: CMakeLists.txt  GCOVProfilingPatched.cpp
runtime/src/main/kotlin/kotlin/: Array.kt
runtime/src/main/kotlin/kotlin/collections/: Arrays.kt
samples/: gradle.properties  settings.gradle
samples/coverage/: README.md  build.gradle  build.gradle.kts
samples/coverage/src/commonMain/kotlin/coverage/: main.kt
samples/coverage/src/commonMain/kotlin/coverage/foo/: bar.kt
samples/coverage/src/commonTest/kotlin/coverage/: CoverageTests.kt
samples/coverage/src/coverageMain/kotlin/: main.kt
shared/src/main/kotlin/org/jetbrains/kotlin/konan/exec/: ExecuteCommand.kt
shared/src/main/kotlin/org/jetbrains/kotlin/konan/util/: DefFile.kt  Util.kt
tools/kotlin-native-gradle-plugin/: build.gradle
(+13 files in other folders)
